--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -1,4 +1,3 @@
-
 name: Optimize resource pack
 on: [push, workflow_dispatch]
 jobs:
@@ -11,10 +10,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # A non-shallow repository clone is required
+      
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4.0.3
         with:
+          packsquash_version: latest  # Ensures the latest version is used
           path: pack
+      
       - name: Download optimized pack
         uses: actions/download-artifact@v4.1.8
         with:
