--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -10,52 +10,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # A non-shallow repository clone is required
-          clean: true  # Ensure a clean checkout
-      
-      - name: Debug Working Directory
-        run: pwd && ls -R
-      
-      - name: Check Exact File Name
-        run: ls -l pack/
-      
-      - name: Fix File Name (if needed)
-        run: |
-          if [ -f "pack/Pack.mcmeta" ]; then
-            mv pack/Pack.mcmeta pack/pack.mcmeta
-          fi
-      
-      - name: Check File Encoding
-        run: file pack/pack.mcmeta
-      
-      - name: Convert File Encoding (if needed)
-        run: |
-          if file pack/pack.mcmeta | grep -q 'UTF-16'; then
-            iconv -f UTF-16 -t UTF-8 pack/pack.mcmeta -o pack/pack.mcmeta
-          fi
-      
-      - name: Verify pack existence after cloning
-        run: |
-          if [ ! -d "pack" ]; then
-            echo "Error: 'pack' directory is missing after cloning!"
-            exit 1
-          fi
-      
-      - name: Verify pack directory and metadata file
-        run: |
-          if [ ! -d "pack" ] || [ ! -f "pack/pack.mcmeta" ]; then
-            echo "Error: Pack directory or pack.mcmeta is missing!"
-            exit 1
-          fi
-      
-      - name: Fix Permissions
-        run: chmod -R 755 pack
-      
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4.0.3
         with:
-          packsquash_version: latest  # Ensures the latest version is used
-          path: /pack/pack.mcmeta  # Explicitly set path
-      
+          path: pack
       - name: Download optimized pack
         uses: actions/download-artifact@v4.1.8
         with:
