--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4.0.3
         with:
-          version: '4.0.3'  # Explicitly specifying PackSquash version
-          path: pack
+          packsquash_version: '4.0.3'  # Explicitly specifying PackSquash version
+          options: '-i pack'  # Define input pack path
       - name: Download optimized pack
         uses: actions/download-artifact@v4.1.8
         with:
