--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4
         with:
-          path: pack
           packsquash_version: latest
+          options: |
+            pack_directory = 'pack'
       - name: Download optimized pack
         uses: actions/download-artifact@v4
         with:
