--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -10,12 +10,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # A non-shallow repository clone is required
+
       - name: Run PackSquash
         uses: ComunidadAylas/PackSquash-action@v4
         with:
           packsquash_version: latest
           options: |
-            pack_directory = 'pack'
+            pack_directory = '.'
+            output_file_path = 'pack.zip'
+
       - name: Download optimized pack
         uses: actions/download-artifact@v4
         with:
@@ -23,7 +26,7 @@ jobs:
 
       - name: Generate Hash
         run: sha1sum pack.zip | head -c 40 > hash.txt
-      
+
       - name: Copy Pack For Plugin
         run: cp pack.zip $(cat hash.txt).zip
 
