--- a/.github/workflows/packsquash.yml
+++ b/.github/workflows/packsquash.yml
@@ -1,5 +1,6 @@
 name: Optimize resource pack
 on: [push, workflow_dispatch]
+
 jobs:
   packsquash:
     permissions: write-all
@@ -17,12 +18,7 @@ jobs:
           packsquash_version: latest
           options: |
             pack_directory = '.'
-            output_file_path = 'pack.zip'
-
-      - name: Download optimized pack
-        uses: actions/download-artifact@v4
-        with:
-          name: Optimized pack
+            output_file_path = './pack.zip'
 
       - name: Generate Hash
         run: sha1sum pack.zip | head -c 40 > hash.txt
